opam-version: "2.0"
synopsis: "Adding a few functions to Mtime to use alongside Base"
description: "Adding a few functions to Mtime to use alongside Base"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/mtime-extended"
doc: "https://github.com/mbarbin/mtime-extended"
bug-reports: "https://github.com/mbarbin/mtime-extended/issues"
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.11"}
  "base" {>= "v0.16" & < "v0.17"}
  "core" {>= "v0.16" & < "v0.17"}
  "core_unix" {>= "v0.16" & < "v0.17"}
  "expect_test_helpers_core" {>= "v0.16" & < "v0.17"}
  "ppx_jane" {>= "v0.16" & < "v0.17"}
  "ppx_js_style" {>= "v0.16" & < "v0.17"}
  "stdio" {>= "v0.16" & < "v0.17"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/mtime-extended.git"
